<resources>
    <string name="app_name">NovaRet</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="contado">CONTADO</string>
    <string name="credito">CREDITO</string>
    <string name="anticipos">ANTICIPOS</string>
    <string name="servicios">OTROS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_precio_premium">Premium</string>
    <string name="hint_precio_Magna">Magna</string>
    <string name="hint_precio_diesel">Diesel</string>
    <string name="btnTicket">Comprobante</string>
    <string name="btnCfdi">CFDI\'s</string>
    <string name="card_title_contado">Publico General</string>
    <string name="card_message_demo_small">Generación de comprobante impreso o factura (CFDI) para clientes no identificados.</string>
    <string name="card_title_tpv">TPV\'s</string>
    <string name="card_message_tpv_small">Generación de comprobante para terminales de servicio, bancarias se podrán facturar (CFDI).</string>
    <string name="card_title_aceite">Aceites</string>
    <string name="card_message_aceite_small">Identificación de aceites por código de barras, obteniendo el precio del volumetrico.</string>
    <string name="btnCamera">Scann Aceite</string>
    <string name="comprobante">Comprobante</string>
    <string name="posicion_carga">Posicion de Carga</string>
    <string name="folio">Folio</string>
    <string name="producto">Producto</string>
    <string name="volumen">Volumen</string>
    <string name="precio">Precio</string>
    <string name="total">Total</string>
    <string name="print">Imprimir</string>
    <string name="cliente">Cliente</string>
    <string name="common_network_error">Problema de conexion</string>
    <string name="publicogeneral">Publico General</string>
    <string name="settings">Configuraciones</string>
    <string name="printer">Impresoras</string>
    <string name="version">Versión</string>
    <string name="odbcConnect">ODBC - Integra</string>
    <string name="ip">192.168.1.250</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="puerto">Puerto</string>
    <string name="gateway">SGPM Gateway</string>
    <string name="odbcVolumetrico">ODBC - Volumetrico</string>
    <string name="facturacion">Facturación</string>
    <string name="marca">Bandera</string>
    <string name="estacion">Estacion</string>
    <string name="base">Nombre de base</string>
    <string name="update">Actualizar</string>
    <string name="settings1">Settings</string>
    <!--creamos recursos para SharedPreferences-->
    <string name="spVersionName">spVersionName</string>
    <string name="spVersionDate">spVersionDate</string>
    <string name="spIpConnect">spIpConnect</string>
    <string name="spUserConnect">spUserConnect</string>
    <string name="spPassConnect">spPassConnect</string>
    <string name="spPortConnect">spPortConnect</string>
    <string name="spIpVolumetrico">spIpVolumetrico</string>
    <string name="spDbVolumetrico">spDbVolumetrico</string>
    <string name="spUserVolumetrico">spUserVolumetrico</string>
    <string name="spPassVolumetrico">spPassVolumetrico</string>
    <string name="spPortVolumetrico">spPortVolumetrico</string>
    <string name="spSgpmGatewayVolumetrico">spSgpmGatewayVolumetrico</string>
    <string name="spUrlIntegra">spUrlIntegra</string>
    <string name="spBandera">spBandera</string>
    <string name="spCveest">spCveest</string>
    <string name="dialog_title_error">Parece que algo salio mal.</string>
    <string name="dialog_title_succed">Parece que algo salio mal.</string>
    <string name="message_action_success">Confirmar</string>
    <string name="dialog_confirm">Confirmar</string>
    <string name="dialog_cancel">Cancelar</string>
    <!--Recursos para la impresion-->
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
    <string name="dialog_confirm_title_printer">Resultado de impresion</string>
    <string name="dialog_inicio">Iniciar</string>
    <string name="dialog_reimpresion">Imprimir otro</string>
    <string name="Save">Datos guardados exitosamente !!!</string>
    <string name="chooserPayment">Metodo de pago</string>
    <string name="btnTicketTest">Test de impresion</string>
    <string name="PrinterName">Impresora</string>
    <string name="PrinterMac">Impresora destino</string>
    <string name="card_title_rfic">Etiqueta RFID</string>
    <string name="card_message_rfid">Proceso para identificación de un cliente mediante etiqueta, llavero o tarjeta con chip RFID.</string>
    <string name="btnRfid">RFID</string>
    <string name="card_title_nombre">Busqueda nombre</string>
    <string name="card_message_nombre">Proceso para identificación de un cliente mediante el nombre, se deberá tener mínimo tres caracteres para proceder con la búsqueda.</string>
    <string name="btnNombre">Nombre</string>
    <string name="btnNip">NIP</string>
    <string name="card_title_nip">Busqueda NIP</string>
    <string name="card_message_nip">Proceso para identificación de un cliente mediante el NIP asignado a la unidad del cliente.</string>
    <string name="menu_hint_posicion">Bomba</string>
</resources>
