<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CreditoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"

        app:expanded="false">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:expandedTitleGravity="center|left"
            app:title="@string/app_name"
            app:titleEnabled="true"
            app:toolbarId="@+id/toolbar">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:popupTheme="@style/AppTheme.PopupOverlay">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/menu_hint_posicion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/posicion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/common_padding_min"
        android:paddingBottom="@dimen/common_padding_min"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardRfid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:layout_marginTop="@dimen/common_padding_min"
                android:clickable="false"
                android:focusable="false">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    android:layout_marginEnd="@dimen/common_padding_default"
                    android:layout_marginStart="@dimen/common_padding_none">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgCardSmall"
                        android:layout_width="@dimen/card_img_size"
                        android:layout_height="@dimen/card_img_size"
                        android:src="@drawable/ic_nfc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCfdi"
                        android:text="@string/btnRfid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_padding_min"
                        app:icon="@drawable/ic_search"
                        app:rippleColor="@color/color_primary_Variant"
                        app:cornerRadius="@dimen/common_padding_none"
                        app:strokeColor="@color/color_primary"
                        app:strokeWidth="@dimen/common_padding_view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgCardSmall"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                    <TextView
                        android:id="@+id/tvTitle"
                        android:text="@string/card_title_rfic"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_padding_default"
                        android:layout_marginEnd="@dimen/common_padding_default"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/imgCardSmall"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/card_message_rfid"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toStartOf="@id/tvTitle"
                        app:layout_constraintEnd_toEndOf="@id/tvTitle"
                        app:layout_constraintTop_toBottomOf="@id/tvTitle"
                        app:layout_constraintBottom_toTopOf="@id/btnCfdi"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:layout_marginTop="@dimen/common_padding_min"
                android:clickable="false"
                android:focusable="false">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    android:layout_marginEnd="@dimen/common_padding_default"
                    android:layout_marginStart="@dimen/common_padding_none">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgCardSmallNombre"
                        android:layout_width="@dimen/card_img_size"
                        android:layout_height="@dimen/card_img_size"
                        android:src="@drawable/ic_username"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnNombre"
                        android:text="@string/btnNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_padding_min"
                        app:icon="@drawable/ic_search"
                        app:rippleColor="@color/color_primary_Variant"
                        app:cornerRadius="@dimen/common_padding_none"
                        app:strokeColor="@color/color_primary"
                        app:strokeWidth="@dimen/common_padding_view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgCardSmallNombre"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                    <TextView
                        android:id="@+id/tvTitleNombre"
                        android:text="@string/card_title_nombre"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_padding_default"
                        android:layout_marginEnd="@dimen/common_padding_default"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/imgCardSmallNombre"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/card_message_nombre"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toStartOf="@id/tvTitleNombre"
                        app:layout_constraintEnd_toEndOf="@id/tvTitleNombre"
                        app:layout_constraintTop_toBottomOf="@id/tvTitleNombre"
                        app:layout_constraintBottom_toTopOf="@id/btnNombre"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardNip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_min"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:layout_marginTop="@dimen/common_padding_min"
                android:clickable="false"
                android:focusable="false">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    android:layout_marginEnd="@dimen/common_padding_default"
                    android:layout_marginStart="@dimen/common_padding_none">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgCardSmallNip"
                        android:layout_width="@dimen/card_img_size"
                        android:layout_height="@dimen/card_img_size"
                        android:src="@drawable/ic_nip"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnNip"
                        android:text="@string/btnNip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_padding_min"
                        app:icon="@drawable/ic_search"
                        app:rippleColor="@color/color_primary_Variant"
                        app:cornerRadius="@dimen/common_padding_none"
                        app:strokeColor="@color/color_primary"
                        app:strokeWidth="@dimen/common_padding_view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgCardSmallNip"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                    <TextView
                        android:id="@+id/tvTitleNip"
                        android:text="@string/card_title_nip"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_padding_default"
                        android:layout_marginEnd="@dimen/common_padding_default"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/imgCardSmallNip"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/card_message_nip"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toStartOf="@id/tvTitleNip"
                        app:layout_constraintEnd_toEndOf="@id/tvTitleNip"
                        app:layout_constraintTop_toBottomOf="@id/tvTitleNip"
                        app:layout_constraintBottom_toTopOf="@id/btnNip"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>