<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrinterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        app:titleTextColor="@color/color_on_primary"
        app:title="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/printer_search"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="false"
        android:focusable="false">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:layout_marginEnd="@dimen/common_padding_default"
            android:layout_marginStart="@dimen/common_padding_none">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCardSmall"
                android:layout_width="@dimen/card_img_size"
                android:layout_height="@dimen/card_img_size"
                android:src="@drawable/ic_printer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTicket"
                android:text="@string/btnTicketTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:layout_marginBottom="@dimen/common_padding_min"
                app:icon="@drawable/ic_receipt"
                app:rippleColor="@color/color_primary_Variant"
                app:cornerRadius="@dimen/common_padding_none"
                app:strokeColor="@color/color_primary"
                app:strokeWidth="@dimen/common_padding_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgCardSmall"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <TextView
                android:id="@+id/tvPrinterName"
                android:text="@string/PrinterName"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding_default"
                android:layout_marginEnd="@dimen/common_padding_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imgCardSmall"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tvTarget"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/PrinterMac"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="@id/tvPrinterName"
                app:layout_constraintEnd_toEndOf="@id/tvPrinterName"
                app:layout_constraintTop_toBottomOf="@id/tvPrinterName"
                app:layout_constraintBottom_toTopOf="@id/btnTicket"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/item_height_threeLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardContado"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_printer" />
    <!--<ListView
        android:id="@+id/lstReceiveData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardContado"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>